change packege version and add pb-key

--- a/server/package.json
+++ b/server/package.json
@@ -1,17 +1,16 @@
 {
   "name": "server",
   "version": "1.0.0",
-  "description": "",
+  "description": "cryptography's  server",
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
-  "keywords": [],
-  "author": "",
+  "author": "By Lazarr",
   "license": "ISC",
   "dependencies": {
     "cors": "^2.8.5",
-    "express": "^4.18.1",
-    "nodemon": "^3.0.2"
+    "ethereum-cryptography": "^1.1.2",
+    "express": "^4.18.1"
   }
 }
